Alteracao no estilo da fonte da pagina inicial

--- a/pages/index.html
+++ b/pages/index.html
@@ -6,11 +6,12 @@
 		<title>Jogos</title>
 		<link rel="stylesheet" href="../css/style.css">
 		<link rel="shortcut icon" href="../img/games.ico">
+		<link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
     </head>
 	<body>
 		<div class="imageBox">
-			<h1>Jogos</h1>
-			<p>Segue abaixo lista de jogos que vale a pena jogar:</p>
+			<h1 class="titulo">Jogos</h1>
+			<p class="paragrafo">Segue abaixo lista de jogos que vale a pena jogar:</p>
 			<nav class="principal">
 				<ul>
 					<li><a href="./rpg.html">RPG</a></li>
